--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROFILE OF VINAY</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script data-ad-client="ca-pub-7443891398012517" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <table id="vinay" cellspacing="30">
